# yahoo-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev_helper/: clean.py
src/yahoo/: consts.py  log_manager.py  main.py
src/yahoo/analyst/: word_frequency_analyst.py
src/yahoo/crawlers/: anchor_crawler.py  comment_crawler.py  page_to_do_plugins.py
